[gd_scene load_steps=64 format=3 uid="uid://crx001gyel0ic"]

[ext_resource type="Script" uid="uid://bvpw6boo51wj" path="res://Scripts/zombie.gd" id="1_n70j1"]
[ext_resource type="Texture2D" uid="uid://bl7u1mb8wvr8j" path="res://Characters/Zombie/Walk.png" id="2_iyl7r"]
[ext_resource type="Texture2D" uid="uid://bqn41qkj1cuh6" path="res://Characters/Zombie/Death.png" id="2_vy0uf"]
[ext_resource type="Texture2D" uid="uid://d1qasy81da4dt" path="res://Characters/Zombie/Idle.png" id="2_w2xga"]
[ext_resource type="PackedScene" uid="uid://bds101fkj754g" path="res://Scenes/healthbar.tscn" id="3_iyl7r"]
[ext_resource type="AudioStream" uid="uid://bkc4fu4asew8x" path="res://audios/27e3np3ple3-zombie-sfx-0.mp3" id="6_4slyf"]
[ext_resource type="AudioStream" uid="uid://44c8uii6l82q" path="res://audios/Knife Slash-edited-2025-10-31T13-33-59.mp3" id="7_5ia6i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oluo0"]
atlas = ExtResource("2_w2xga")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpmu7"]
atlas = ExtResource("2_w2xga")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lheda"]
atlas = ExtResource("2_w2xga")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aq8d"]
atlas = ExtResource("2_w2xga")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vj3n"]
atlas = ExtResource("2_w2xga")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oef5j"]
atlas = ExtResource("2_vy0uf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j7rj"]
atlas = ExtResource("2_vy0uf")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcnhs"]
atlas = ExtResource("2_vy0uf")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbv43"]
atlas = ExtResource("2_vy0uf")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hu6f"]
atlas = ExtResource("2_vy0uf")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlooh"]
atlas = ExtResource("2_vy0uf")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5fw4"]
atlas = ExtResource("2_vy0uf")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy0uf"]
atlas = ExtResource("2_iyl7r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2xga"]
atlas = ExtResource("2_iyl7r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4slyf"]
atlas = ExtResource("2_iyl7r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ia6i"]
atlas = ExtResource("2_iyl7r")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx3wb"]
atlas = ExtResource("2_iyl7r")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0wq0"]
atlas = ExtResource("2_iyl7r")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hslf5"]
atlas = ExtResource("2_iyl7r")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2tw5"]
atlas = ExtResource("2_iyl7r")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj6an"]
atlas = ExtResource("2_iyl7r")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmcj1"]
atlas = ExtResource("2_iyl7r")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw8xw"]
atlas = ExtResource("2_iyl7r")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0eft"]
atlas = ExtResource("2_iyl7r")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3vja"]
atlas = ExtResource("2_iyl7r")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaj8p"]
atlas = ExtResource("2_iyl7r")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrf8t"]
atlas = ExtResource("2_iyl7r")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgnkq"]
atlas = ExtResource("2_iyl7r")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u174i"]
atlas = ExtResource("2_iyl7r")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofjqa"]
atlas = ExtResource("2_iyl7r")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x0ip"]
atlas = ExtResource("2_iyl7r")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox8of"]
atlas = ExtResource("2_iyl7r")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b48it"]
atlas = ExtResource("2_iyl7r")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swm38"]
atlas = ExtResource("2_iyl7r")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rifmc"]
atlas = ExtResource("2_iyl7r")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tlni"]
atlas = ExtResource("2_iyl7r")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwc4t"]
atlas = ExtResource("2_iyl7r")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sprdo"]
atlas = ExtResource("2_iyl7r")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6itn5"]
atlas = ExtResource("2_iyl7r")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyvyt"]
atlas = ExtResource("2_iyl7r")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m47pd"]
atlas = ExtResource("2_iyl7r")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fddb"]
atlas = ExtResource("2_iyl7r")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sahoi"]
atlas = ExtResource("2_iyl7r")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe40l"]
atlas = ExtResource("2_iyl7r")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqek8"]
atlas = ExtResource("2_iyl7r")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fovc1"]
atlas = ExtResource("2_iyl7r")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s02h4"]
atlas = ExtResource("2_iyl7r")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t470i"]
atlas = ExtResource("2_iyl7r")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtvaj"]
atlas = ExtResource("2_iyl7r")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_722ra"]
atlas = ExtResource("2_iyl7r")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiksi"]
atlas = ExtResource("2_iyl7r")
region = Rect2(256, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhmv2"]
atlas = ExtResource("2_iyl7r")
region = Rect2(288, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_050lg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oluo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpmu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lheda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aq8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vj3n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oef5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j7rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcnhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbv43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hu6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlooh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5fw4")
}],
"loop": false,
"name": &"zdead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy0uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2xga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4slyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ia6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx3wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0wq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hslf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2tw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj6an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmcj1")
}],
"loop": true,
"name": &"zwalk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw8xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0eft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3vja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaj8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrf8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgnkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u174i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofjqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x0ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox8of")
}],
"loop": true,
"name": &"zwalk_forward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swm38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rifmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tlni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwc4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sprdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6itn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyvyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m47pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fddb")
}],
"loop": true,
"name": &"zwalk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sahoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe40l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqek8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fovc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s02h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t470i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtvaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_722ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhmv2")
}],
"loop": true,
"name": &"zwalk_right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oef5j"]
radius = 5.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n70j1"]
radius = 75.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w2xga"]
height = 28.0

[node name="Zombie" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
collision_layer = 16
collision_mask = 16
script = ExtResource("1_n70j1")

[node name="ZombieSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_050lg")
animation = &"zdead"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_oef5j")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="DetectionArea" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_n70j1")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="enemy_hitbox" type="Area2D" parent="."]
scale = Vector2(1.2517279, 1.0769508)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CapsuleShape2D_w2xga")

[node name="Healthbar" parent="." instance=ExtResource("3_iyl7r")]
offset_left = -13.0
offset_top = -19.0
offset_right = 87.0
offset_bottom = -9.0
scale = Vector2(0.2673512, 0.3490931)

[node name="ZombieSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4slyf")
volume_db = -15.0
autoplay = true

[node name="KnifeSlash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5ia6i")

[connection signal="body_entered" from="detection_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_area_2d_body_exited"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="area_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
